# running-mean-demo

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml
src/running_mean_demo/: __init__.py  elements.py  main.py
tests/: test_main.py
